--- a/popup.html
+++ b/popup.html
@@ -10,9 +10,11 @@
 	</head>	
 	
 	<body>
-		<h3>Add ApeScript:</h3>
-		<textarea name="script" id="script" cols="30" rows="10"></textarea>
-		<input type="submit" id="saveScript" value="Save script for site" />		
+		<div class="popup content">
+			<h3>Add ApeScript:</h3>
+			<textarea name="script" id="script" cols="30" rows="10"></textarea>
+			<input type="submit" id="saveScript" value="Save script for site" />		
+		</div>
 
 
 		<script src="jquery.min.js"></script>
