--- a/options.html
+++ b/options.html
@@ -15,7 +15,12 @@
 				padding:0;
 			}
 			li{
-				margin-bottom:20px;
+				margin-bottom:30px;
+				padding-bottom:20px;
+				border-bottom:1px solid #e0e0e0;
+			}
+			li:last-child{
+				border-bottom: none;
 			}
 			li .CodeMirror{
 				width:100%;
