--- a/options.html
+++ b/options.html
@@ -32,7 +32,7 @@
 	</head>
 	<body>
 		<div class="content">
-			<h2>Manage your ApeScripts</h2>
+			<h2>Manage your scripts</h2>
 			<ul id="scripts">
 				
 			</ul>
