--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
 	
 	<body>
 		<div class="popup content">
-			<h3>Add ApeScript:</h3>
+			<h3>Add script:</h3>
 			<textarea name="script" id="script" cols="30" rows="10"></textarea>
 			<input type="submit" id="saveScript" value="Save script for site" />		
 		</div>
